<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <!--  <item
        android:id="@+id/navigation_restaurant"
        android:icon="@mipmap/ic_home"
        android:title="@string/title_home" /> -->
  <item
      android:id="@+id/navigation_homepage"
      android:icon="@drawable/home"
      android:title="@string/title_homepage" />

    <item
        android:id="@+id/navigation_restaurant"
        android:icon="@mipmap/ic_restaurant"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_hotel"
        android:icon="@mipmap/icon_hotel"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_activityinfo"
        android:icon="@mipmap/ic_info"
        android:title="@string/title_notifications" />

</menu>
