<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_homepage">

    <fragment
        android:id="@+id/navigation_homepage"
        android:name="nullteam.com.doway.fragment.GridViewFragment"
        android:label="@string/title_homepage"
        tools:layout="@layout/fragment_gridview" />

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="nullteam.com.doway.fragment.RestaurantFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/navigation_hotel"
        android:name="nullteam.com.doway.fragment.HotelFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_hotel" />

    <fragment
        android:id="@+id/navigation_activityinfo"
        android:name="nullteam.com.doway.fragment.ActivityInfoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_activityinfo" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="nullteam.com.doway.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>